# tic-tac-toe-opencv

./: pyproject.toml  readme.md  requirements.txt
docs/: cheminement.md  rapport.html  rapport.ipynb
src/: main.py  poster.ipynb  rapport.ipynb  script.py  srcipt.py  symbol_detection.py  test_houg_circles.py  test_shapes.py  tictactoe.py  utils.py
src/model/: keras_model.h5  labels.txt
src/old_files/: functions.py  old_code copy.ipynb  old_code.ipynb  test_houg_circles.py  test_shapes.py
