[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LabyrinthImage"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
   
]

[options]
packages = find:
include_package_data = true
python_requires = >=3.10


[options.packages.find]
exclude = ["tests"]

[options.entry_points]
console_scripts =
    labyrinth-image = labyrinth_image.__main__:main

[options.extras_require]

